// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TypeEditor /> can render for edge 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <TypeEditor
    autofill={[Function]}
    category="edge"
    colorOptions={
      Object {
        "edge": Array [],
        "node": Array [],
      }
    }
    dirty={false}
    displayVariables={Array []}
    form="TYPE_EDITOR"
    handleSubmit={[Function]}
    isNew={false}
    nameTouched={false}
    showCodeView={true}
    toggleCodeView={[Function]}
    type={null}
    valid={true}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        null,
        <h1
          className="editor__heading"
        >
          Create 
          edge
        </h1>,
        <Connect(Guided)
          contentId="guidance.registry.type.label"
        >
          <div
            className="editor__section"
          >
            <h3
              id="field_label"
            >
              Label
            </h3>
            <p>
              The node name is how you will refer to this node type in the rest of Architect.
            </p>
            <Validated
              component={[Function]}
              name="label"
              validation={
                Object {
                  "required": true,
                }
              }
            />
          </div>
        </Connect(Guided)>,
        <Connect(Guided)
          contentId="guidance.registry.type.color"
        >
          <div
            className="editor__section"
          >
            <h2
              id="field_color"
            >
              Color
            </h2>
            <p>
              Choose a color for this node type.
            </p>
            <Validated
              component={[Function]}
              name="color"
              palette="edge-color-seq"
              paletteRange={8}
              validation={
                Object {
                  "required": true,
                }
              }
            />
          </div>
        </Connect(Guided)>,
        false,
        <Connect(Guided)
          contentId="guidance.registry.type.variables"
        >
          <div
            className="editor__section"
          >
            <Variables
              form="TYPE_EDITOR"
              initialSortOrder={
                Object {
                  "direction": "asc",
                  "property": "name",
                }
              }
              name="variables"
              sortableProperties={
                Array [
                  "name",
                  "type",
                ]
              }
            />
          </div>
        </Connect(Guided)>,
      ],
    },
    "ref": null,
    "rendered": Array [
      null,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            "Create ",
            "edge",
          ],
          "className": "editor__heading",
        },
        "ref": null,
        "rendered": Array [
          "Create ",
          "edge",
        ],
        "type": "h1",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <div
            className="editor__section"
          >
            <h3
              id="field_label"
            >
              Label
            </h3>
            <p>
              The node name is how you will refer to this node type in the rest of Architect.
            </p>
            <Validated
              component={[Function]}
              name="label"
              validation={
                Object {
                  "required": true,
                }
              }
            />
          </div>,
          "contentId": "guidance.registry.type.label",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <h3
                id="field_label"
              >
                Label
              </h3>,
              <p>
                The node name is how you will refer to this node type in the rest of Architect.
              </p>,
              <Validated
                component={[Function]}
                name="label"
                validation={
                  Object {
                    "required": true,
                  }
                }
              />,
            ],
            "className": "editor__section",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Label",
                "id": "field_label",
              },
              "ref": null,
              "rendered": "Label",
              "type": "h3",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "The node name is how you will refer to this node type in the rest of Architect.",
              },
              "ref": null,
              "rendered": "The node name is how you will refer to this node type in the rest of Architect.",
              "type": "p",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "component": [Function],
                "name": "label",
                "validation": Object {
                  "required": true,
                },
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": "div",
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <div
            className="editor__section"
          >
            <h2
              id="field_color"
            >
              Color
            </h2>
            <p>
              Choose a color for this node type.
            </p>
            <Validated
              component={[Function]}
              name="color"
              palette="edge-color-seq"
              paletteRange={8}
              validation={
                Object {
                  "required": true,
                }
              }
            />
          </div>,
          "contentId": "guidance.registry.type.color",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <h2
                id="field_color"
              >
                Color
              </h2>,
              <p>
                Choose a color for this node type.
              </p>,
              <Validated
                component={[Function]}
                name="color"
                palette="edge-color-seq"
                paletteRange={8}
                validation={
                  Object {
                    "required": true,
                  }
                }
              />,
            ],
            "className": "editor__section",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Color",
                "id": "field_color",
              },
              "ref": null,
              "rendered": "Color",
              "type": "h2",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Choose a color for this node type.",
              },
              "ref": null,
              "rendered": "Choose a color for this node type.",
              "type": "p",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "component": [Function],
                "name": "color",
                "palette": "edge-color-seq",
                "paletteRange": 8,
                "validation": Object {
                  "required": true,
                },
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": "div",
        },
        "type": [Function],
      },
      false,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <div
            className="editor__section"
          >
            <Variables
              form="TYPE_EDITOR"
              initialSortOrder={
                Object {
                  "direction": "asc",
                  "property": "name",
                }
              }
              name="variables"
              sortableProperties={
                Array [
                  "name",
                  "type",
                ]
              }
            />
          </div>,
          "contentId": "guidance.registry.type.variables",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <Variables
              form="TYPE_EDITOR"
              initialSortOrder={
                Object {
                  "direction": "asc",
                  "property": "name",
                }
              }
              name="variables"
              sortableProperties={
                Array [
                  "name",
                  "type",
                ]
              }
            />,
            "className": "editor__section",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "form": "TYPE_EDITOR",
              "initialSortOrder": Object {
                "direction": "asc",
                "property": "name",
              },
              "name": "variables",
              "sortableProperties": Array [
                "name",
                "type",
              ],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": "div",
        },
        "type": [Function],
      },
    ],
    "type": Symbol(react.fragment),
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          null,
          <h1
            className="editor__heading"
          >
            Create 
            edge
          </h1>,
          <Connect(Guided)
            contentId="guidance.registry.type.label"
          >
            <div
              className="editor__section"
            >
              <h3
                id="field_label"
              >
                Label
              </h3>
              <p>
                The node name is how you will refer to this node type in the rest of Architect.
              </p>
              <Validated
                component={[Function]}
                name="label"
                validation={
                  Object {
                    "required": true,
                  }
                }
              />
            </div>
          </Connect(Guided)>,
          <Connect(Guided)
            contentId="guidance.registry.type.color"
          >
            <div
              className="editor__section"
            >
              <h2
                id="field_color"
              >
                Color
              </h2>
              <p>
                Choose a color for this node type.
              </p>
              <Validated
                component={[Function]}
                name="color"
                palette="edge-color-seq"
                paletteRange={8}
                validation={
                  Object {
                    "required": true,
                  }
                }
              />
            </div>
          </Connect(Guided)>,
          false,
          <Connect(Guided)
            contentId="guidance.registry.type.variables"
          >
            <div
              className="editor__section"
            >
              <Variables
                form="TYPE_EDITOR"
                initialSortOrder={
                  Object {
                    "direction": "asc",
                    "property": "name",
                  }
                }
                name="variables"
                sortableProperties={
                  Array [
                    "name",
                    "type",
                  ]
                }
              />
            </div>
          </Connect(Guided)>,
        ],
      },
      "ref": null,
      "rendered": Array [
        null,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "Create ",
              "edge",
            ],
            "className": "editor__heading",
          },
          "ref": null,
          "rendered": Array [
            "Create ",
            "edge",
          ],
          "type": "h1",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <div
              className="editor__section"
            >
              <h3
                id="field_label"
              >
                Label
              </h3>
              <p>
                The node name is how you will refer to this node type in the rest of Architect.
              </p>
              <Validated
                component={[Function]}
                name="label"
                validation={
                  Object {
                    "required": true,
                  }
                }
              />
            </div>,
            "contentId": "guidance.registry.type.label",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <h3
                  id="field_label"
                >
                  Label
                </h3>,
                <p>
                  The node name is how you will refer to this node type in the rest of Architect.
                </p>,
                <Validated
                  component={[Function]}
                  name="label"
                  validation={
                    Object {
                      "required": true,
                    }
                  }
                />,
              ],
              "className": "editor__section",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Label",
                  "id": "field_label",
                },
                "ref": null,
                "rendered": "Label",
                "type": "h3",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "The node name is how you will refer to this node type in the rest of Architect.",
                },
                "ref": null,
                "rendered": "The node name is how you will refer to this node type in the rest of Architect.",
                "type": "p",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "component": [Function],
                  "name": "label",
                  "validation": Object {
                    "required": true,
                  },
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
            ],
            "type": "div",
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <div
              className="editor__section"
            >
              <h2
                id="field_color"
              >
                Color
              </h2>
              <p>
                Choose a color for this node type.
              </p>
              <Validated
                component={[Function]}
                name="color"
                palette="edge-color-seq"
                paletteRange={8}
                validation={
                  Object {
                    "required": true,
                  }
                }
              />
            </div>,
            "contentId": "guidance.registry.type.color",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <h2
                  id="field_color"
                >
                  Color
                </h2>,
                <p>
                  Choose a color for this node type.
                </p>,
                <Validated
                  component={[Function]}
                  name="color"
                  palette="edge-color-seq"
                  paletteRange={8}
                  validation={
                    Object {
                      "required": true,
                    }
                  }
                />,
              ],
              "className": "editor__section",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Color",
                  "id": "field_color",
                },
                "ref": null,
                "rendered": "Color",
                "type": "h2",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Choose a color for this node type.",
                },
                "ref": null,
                "rendered": "Choose a color for this node type.",
                "type": "p",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "component": [Function],
                  "name": "color",
                  "palette": "edge-color-seq",
                  "paletteRange": 8,
                  "validation": Object {
                    "required": true,
                  },
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
            ],
            "type": "div",
          },
          "type": [Function],
        },
        false,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <div
              className="editor__section"
            >
              <Variables
                form="TYPE_EDITOR"
                initialSortOrder={
                  Object {
                    "direction": "asc",
                    "property": "name",
                  }
                }
                name="variables"
                sortableProperties={
                  Array [
                    "name",
                    "type",
                  ]
                }
              />
            </div>,
            "contentId": "guidance.registry.type.variables",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <Variables
                form="TYPE_EDITOR"
                initialSortOrder={
                  Object {
                    "direction": "asc",
                    "property": "name",
                  }
                }
                name="variables"
                sortableProperties={
                  Array [
                    "name",
                    "type",
                  ]
                }
              />,
              "className": "editor__section",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "form": "TYPE_EDITOR",
                "initialSortOrder": Object {
                  "direction": "asc",
                  "property": "name",
                },
                "name": "variables",
                "sortableProperties": Array [
                  "name",
                  "type",
                ],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": "div",
          },
          "type": [Function],
        },
      ],
      "type": Symbol(react.fragment),
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`<TypeEditor /> can render for node 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <TypeEditor
    autofill={[Function]}
    category="node"
    colorOptions={
      Object {
        "edge": Array [],
        "node": Array [],
      }
    }
    dirty={false}
    displayVariables={Array []}
    form="TYPE_EDITOR"
    handleSubmit={[Function]}
    isNew={false}
    nameTouched={false}
    showCodeView={true}
    toggleCodeView={[Function]}
    type={null}
    valid={true}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        null,
        <h1
          className="editor__heading"
        >
          Create 
          node
        </h1>,
        <Connect(Guided)
          contentId="guidance.registry.type.label"
        >
          <div
            className="editor__section"
          >
            <h3
              id="field_label"
            >
              Label
            </h3>
            <p>
              The node name is how you will refer to this node type in the rest of Architect.
            </p>
            <Validated
              component={[Function]}
              name="label"
              validation={
                Object {
                  "required": true,
                }
              }
            />
          </div>
        </Connect(Guided)>,
        <Connect(Guided)
          contentId="guidance.registry.type.color"
        >
          <div
            className="editor__section"
          >
            <h2
              id="field_color"
            >
              Color
            </h2>
            <p>
              Choose a color for this node type.
            </p>
            <Validated
              component={[Function]}
              name="color"
              palette="node-color-seq"
              paletteRange={10}
              validation={
                Object {
                  "required": true,
                }
              }
            />
          </div>
        </Connect(Guided)>,
        <React.Fragment>
          <Connect(Guided)
            contentId="guidance.registry.type.icon"
          >
            <div
              className="editor__section"
            >
              <h2
                id="field_iconVariant"
              >
                Icon
              </h2>
              <p>
                Choose an icon to display on interfaces that create this node.
              </p>
              <Validated
                component={[Function]}
                name="iconVariant"
                optionComponent={[Function]}
                options={
                  Array [
                    "add-a-person",
                    "add-a-place",
                  ]
                }
                validation={
                  Object {
                    "required": true,
                  }
                }
              />
            </div>
          </Connect(Guided)>
          <Connect(Guided)
            contentId="guidance.registry.type.displayVariable"
          >
            <div
              className="editor__section"
            >
              <h2>
                Display Variable
              </h2>
              <p>
                Select a variable to use as a label when displaying this node.
              </p>
              <Field
                component={[Function]}
                name="displayVariable"
                options={Array []}
              >
                <option
                  value=""
                >
                  — Select display variable —
                </option>
              </Field>
            </div>
          </Connect(Guided)>
        </React.Fragment>,
        <Connect(Guided)
          contentId="guidance.registry.type.variables"
        >
          <div
            className="editor__section"
          >
            <Variables
              form="TYPE_EDITOR"
              initialSortOrder={
                Object {
                  "direction": "asc",
                  "property": "name",
                }
              }
              name="variables"
              sortableProperties={
                Array [
                  "name",
                  "type",
                ]
              }
            />
          </div>
        </Connect(Guided)>,
      ],
    },
    "ref": null,
    "rendered": Array [
      null,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            "Create ",
            "node",
          ],
          "className": "editor__heading",
        },
        "ref": null,
        "rendered": Array [
          "Create ",
          "node",
        ],
        "type": "h1",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <div
            className="editor__section"
          >
            <h3
              id="field_label"
            >
              Label
            </h3>
            <p>
              The node name is how you will refer to this node type in the rest of Architect.
            </p>
            <Validated
              component={[Function]}
              name="label"
              validation={
                Object {
                  "required": true,
                }
              }
            />
          </div>,
          "contentId": "guidance.registry.type.label",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <h3
                id="field_label"
              >
                Label
              </h3>,
              <p>
                The node name is how you will refer to this node type in the rest of Architect.
              </p>,
              <Validated
                component={[Function]}
                name="label"
                validation={
                  Object {
                    "required": true,
                  }
                }
              />,
            ],
            "className": "editor__section",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Label",
                "id": "field_label",
              },
              "ref": null,
              "rendered": "Label",
              "type": "h3",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "The node name is how you will refer to this node type in the rest of Architect.",
              },
              "ref": null,
              "rendered": "The node name is how you will refer to this node type in the rest of Architect.",
              "type": "p",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "component": [Function],
                "name": "label",
                "validation": Object {
                  "required": true,
                },
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": "div",
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <div
            className="editor__section"
          >
            <h2
              id="field_color"
            >
              Color
            </h2>
            <p>
              Choose a color for this node type.
            </p>
            <Validated
              component={[Function]}
              name="color"
              palette="node-color-seq"
              paletteRange={10}
              validation={
                Object {
                  "required": true,
                }
              }
            />
          </div>,
          "contentId": "guidance.registry.type.color",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <h2
                id="field_color"
              >
                Color
              </h2>,
              <p>
                Choose a color for this node type.
              </p>,
              <Validated
                component={[Function]}
                name="color"
                palette="node-color-seq"
                paletteRange={10}
                validation={
                  Object {
                    "required": true,
                  }
                }
              />,
            ],
            "className": "editor__section",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Color",
                "id": "field_color",
              },
              "ref": null,
              "rendered": "Color",
              "type": "h2",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Choose a color for this node type.",
              },
              "ref": null,
              "rendered": "Choose a color for this node type.",
              "type": "p",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "component": [Function],
                "name": "color",
                "palette": "node-color-seq",
                "paletteRange": 10,
                "validation": Object {
                  "required": true,
                },
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": "div",
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": Array [
            <Connect(Guided)
              contentId="guidance.registry.type.icon"
            >
              <div
                className="editor__section"
              >
                <h2
                  id="field_iconVariant"
                >
                  Icon
                </h2>
                <p>
                  Choose an icon to display on interfaces that create this node.
                </p>
                <Validated
                  component={[Function]}
                  name="iconVariant"
                  optionComponent={[Function]}
                  options={
                    Array [
                      "add-a-person",
                      "add-a-place",
                    ]
                  }
                  validation={
                    Object {
                      "required": true,
                    }
                  }
                />
              </div>
            </Connect(Guided)>,
            <Connect(Guided)
              contentId="guidance.registry.type.displayVariable"
            >
              <div
                className="editor__section"
              >
                <h2>
                  Display Variable
                </h2>
                <p>
                  Select a variable to use as a label when displaying this node.
                </p>
                <Field
                  component={[Function]}
                  name="displayVariable"
                  options={Array []}
                >
                  <option
                    value=""
                  >
                    — Select display variable —
                  </option>
                </Field>
              </div>
            </Connect(Guided)>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <div
                className="editor__section"
              >
                <h2
                  id="field_iconVariant"
                >
                  Icon
                </h2>
                <p>
                  Choose an icon to display on interfaces that create this node.
                </p>
                <Validated
                  component={[Function]}
                  name="iconVariant"
                  optionComponent={[Function]}
                  options={
                    Array [
                      "add-a-person",
                      "add-a-place",
                    ]
                  }
                  validation={
                    Object {
                      "required": true,
                    }
                  }
                />
              </div>,
              "contentId": "guidance.registry.type.icon",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <h2
                    id="field_iconVariant"
                  >
                    Icon
                  </h2>,
                  <p>
                    Choose an icon to display on interfaces that create this node.
                  </p>,
                  <Validated
                    component={[Function]}
                    name="iconVariant"
                    optionComponent={[Function]}
                    options={
                      Array [
                        "add-a-person",
                        "add-a-place",
                      ]
                    }
                    validation={
                      Object {
                        "required": true,
                      }
                    }
                  />,
                ],
                "className": "editor__section",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Icon",
                    "id": "field_iconVariant",
                  },
                  "ref": null,
                  "rendered": "Icon",
                  "type": "h2",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Choose an icon to display on interfaces that create this node.",
                  },
                  "ref": null,
                  "rendered": "Choose an icon to display on interfaces that create this node.",
                  "type": "p",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "component": [Function],
                    "name": "iconVariant",
                    "optionComponent": [Function],
                    "options": Array [
                      "add-a-person",
                      "add-a-place",
                    ],
                    "validation": Object {
                      "required": true,
                    },
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
              ],
              "type": "div",
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <div
                className="editor__section"
              >
                <h2>
                  Display Variable
                </h2>
                <p>
                  Select a variable to use as a label when displaying this node.
                </p>
                <Field
                  component={[Function]}
                  name="displayVariable"
                  options={Array []}
                >
                  <option
                    value=""
                  >
                    — Select display variable —
                  </option>
                </Field>
              </div>,
              "contentId": "guidance.registry.type.displayVariable",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <h2>
                    Display Variable
                  </h2>,
                  <p>
                    Select a variable to use as a label when displaying this node.
                  </p>,
                  <Field
                    component={[Function]}
                    name="displayVariable"
                    options={Array []}
                  >
                    <option
                      value=""
                    >
                      — Select display variable —
                    </option>
                  </Field>,
                ],
                "className": "editor__section",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Display Variable",
                  },
                  "ref": null,
                  "rendered": "Display Variable",
                  "type": "h2",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Select a variable to use as a label when displaying this node.",
                  },
                  "ref": null,
                  "rendered": "Select a variable to use as a label when displaying this node.",
                  "type": "p",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": <option
                      value=""
                    >
                      — Select display variable —
                    </option>,
                    "component": [Function],
                    "name": "displayVariable",
                    "options": Array [],
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "— Select display variable —",
                      "value": "",
                    },
                    "ref": null,
                    "rendered": "— Select display variable —",
                    "type": "option",
                  },
                  "type": [Function],
                },
              ],
              "type": "div",
            },
            "type": [Function],
          },
        ],
        "type": Symbol(react.fragment),
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <div
            className="editor__section"
          >
            <Variables
              form="TYPE_EDITOR"
              initialSortOrder={
                Object {
                  "direction": "asc",
                  "property": "name",
                }
              }
              name="variables"
              sortableProperties={
                Array [
                  "name",
                  "type",
                ]
              }
            />
          </div>,
          "contentId": "guidance.registry.type.variables",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <Variables
              form="TYPE_EDITOR"
              initialSortOrder={
                Object {
                  "direction": "asc",
                  "property": "name",
                }
              }
              name="variables"
              sortableProperties={
                Array [
                  "name",
                  "type",
                ]
              }
            />,
            "className": "editor__section",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "form": "TYPE_EDITOR",
              "initialSortOrder": Object {
                "direction": "asc",
                "property": "name",
              },
              "name": "variables",
              "sortableProperties": Array [
                "name",
                "type",
              ],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": "div",
        },
        "type": [Function],
      },
    ],
    "type": Symbol(react.fragment),
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          null,
          <h1
            className="editor__heading"
          >
            Create 
            node
          </h1>,
          <Connect(Guided)
            contentId="guidance.registry.type.label"
          >
            <div
              className="editor__section"
            >
              <h3
                id="field_label"
              >
                Label
              </h3>
              <p>
                The node name is how you will refer to this node type in the rest of Architect.
              </p>
              <Validated
                component={[Function]}
                name="label"
                validation={
                  Object {
                    "required": true,
                  }
                }
              />
            </div>
          </Connect(Guided)>,
          <Connect(Guided)
            contentId="guidance.registry.type.color"
          >
            <div
              className="editor__section"
            >
              <h2
                id="field_color"
              >
                Color
              </h2>
              <p>
                Choose a color for this node type.
              </p>
              <Validated
                component={[Function]}
                name="color"
                palette="node-color-seq"
                paletteRange={10}
                validation={
                  Object {
                    "required": true,
                  }
                }
              />
            </div>
          </Connect(Guided)>,
          <React.Fragment>
            <Connect(Guided)
              contentId="guidance.registry.type.icon"
            >
              <div
                className="editor__section"
              >
                <h2
                  id="field_iconVariant"
                >
                  Icon
                </h2>
                <p>
                  Choose an icon to display on interfaces that create this node.
                </p>
                <Validated
                  component={[Function]}
                  name="iconVariant"
                  optionComponent={[Function]}
                  options={
                    Array [
                      "add-a-person",
                      "add-a-place",
                    ]
                  }
                  validation={
                    Object {
                      "required": true,
                    }
                  }
                />
              </div>
            </Connect(Guided)>
            <Connect(Guided)
              contentId="guidance.registry.type.displayVariable"
            >
              <div
                className="editor__section"
              >
                <h2>
                  Display Variable
                </h2>
                <p>
                  Select a variable to use as a label when displaying this node.
                </p>
                <Field
                  component={[Function]}
                  name="displayVariable"
                  options={Array []}
                >
                  <option
                    value=""
                  >
                    — Select display variable —
                  </option>
                </Field>
              </div>
            </Connect(Guided)>
          </React.Fragment>,
          <Connect(Guided)
            contentId="guidance.registry.type.variables"
          >
            <div
              className="editor__section"
            >
              <Variables
                form="TYPE_EDITOR"
                initialSortOrder={
                  Object {
                    "direction": "asc",
                    "property": "name",
                  }
                }
                name="variables"
                sortableProperties={
                  Array [
                    "name",
                    "type",
                  ]
                }
              />
            </div>
          </Connect(Guided)>,
        ],
      },
      "ref": null,
      "rendered": Array [
        null,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "Create ",
              "node",
            ],
            "className": "editor__heading",
          },
          "ref": null,
          "rendered": Array [
            "Create ",
            "node",
          ],
          "type": "h1",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <div
              className="editor__section"
            >
              <h3
                id="field_label"
              >
                Label
              </h3>
              <p>
                The node name is how you will refer to this node type in the rest of Architect.
              </p>
              <Validated
                component={[Function]}
                name="label"
                validation={
                  Object {
                    "required": true,
                  }
                }
              />
            </div>,
            "contentId": "guidance.registry.type.label",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <h3
                  id="field_label"
                >
                  Label
                </h3>,
                <p>
                  The node name is how you will refer to this node type in the rest of Architect.
                </p>,
                <Validated
                  component={[Function]}
                  name="label"
                  validation={
                    Object {
                      "required": true,
                    }
                  }
                />,
              ],
              "className": "editor__section",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Label",
                  "id": "field_label",
                },
                "ref": null,
                "rendered": "Label",
                "type": "h3",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "The node name is how you will refer to this node type in the rest of Architect.",
                },
                "ref": null,
                "rendered": "The node name is how you will refer to this node type in the rest of Architect.",
                "type": "p",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "component": [Function],
                  "name": "label",
                  "validation": Object {
                    "required": true,
                  },
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
            ],
            "type": "div",
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <div
              className="editor__section"
            >
              <h2
                id="field_color"
              >
                Color
              </h2>
              <p>
                Choose a color for this node type.
              </p>
              <Validated
                component={[Function]}
                name="color"
                palette="node-color-seq"
                paletteRange={10}
                validation={
                  Object {
                    "required": true,
                  }
                }
              />
            </div>,
            "contentId": "guidance.registry.type.color",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <h2
                  id="field_color"
                >
                  Color
                </h2>,
                <p>
                  Choose a color for this node type.
                </p>,
                <Validated
                  component={[Function]}
                  name="color"
                  palette="node-color-seq"
                  paletteRange={10}
                  validation={
                    Object {
                      "required": true,
                    }
                  }
                />,
              ],
              "className": "editor__section",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Color",
                  "id": "field_color",
                },
                "ref": null,
                "rendered": "Color",
                "type": "h2",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Choose a color for this node type.",
                },
                "ref": null,
                "rendered": "Choose a color for this node type.",
                "type": "p",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "component": [Function],
                  "name": "color",
                  "palette": "node-color-seq",
                  "paletteRange": 10,
                  "validation": Object {
                    "required": true,
                  },
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
            ],
            "type": "div",
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": Array [
              <Connect(Guided)
                contentId="guidance.registry.type.icon"
              >
                <div
                  className="editor__section"
                >
                  <h2
                    id="field_iconVariant"
                  >
                    Icon
                  </h2>
                  <p>
                    Choose an icon to display on interfaces that create this node.
                  </p>
                  <Validated
                    component={[Function]}
                    name="iconVariant"
                    optionComponent={[Function]}
                    options={
                      Array [
                        "add-a-person",
                        "add-a-place",
                      ]
                    }
                    validation={
                      Object {
                        "required": true,
                      }
                    }
                  />
                </div>
              </Connect(Guided)>,
              <Connect(Guided)
                contentId="guidance.registry.type.displayVariable"
              >
                <div
                  className="editor__section"
                >
                  <h2>
                    Display Variable
                  </h2>
                  <p>
                    Select a variable to use as a label when displaying this node.
                  </p>
                  <Field
                    component={[Function]}
                    name="displayVariable"
                    options={Array []}
                  >
                    <option
                      value=""
                    >
                      — Select display variable —
                    </option>
                  </Field>
                </div>
              </Connect(Guided)>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <div
                  className="editor__section"
                >
                  <h2
                    id="field_iconVariant"
                  >
                    Icon
                  </h2>
                  <p>
                    Choose an icon to display on interfaces that create this node.
                  </p>
                  <Validated
                    component={[Function]}
                    name="iconVariant"
                    optionComponent={[Function]}
                    options={
                      Array [
                        "add-a-person",
                        "add-a-place",
                      ]
                    }
                    validation={
                      Object {
                        "required": true,
                      }
                    }
                  />
                </div>,
                "contentId": "guidance.registry.type.icon",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <h2
                      id="field_iconVariant"
                    >
                      Icon
                    </h2>,
                    <p>
                      Choose an icon to display on interfaces that create this node.
                    </p>,
                    <Validated
                      component={[Function]}
                      name="iconVariant"
                      optionComponent={[Function]}
                      options={
                        Array [
                          "add-a-person",
                          "add-a-place",
                        ]
                      }
                      validation={
                        Object {
                          "required": true,
                        }
                      }
                    />,
                  ],
                  "className": "editor__section",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "Icon",
                      "id": "field_iconVariant",
                    },
                    "ref": null,
                    "rendered": "Icon",
                    "type": "h2",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "Choose an icon to display on interfaces that create this node.",
                    },
                    "ref": null,
                    "rendered": "Choose an icon to display on interfaces that create this node.",
                    "type": "p",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "component": [Function],
                      "name": "iconVariant",
                      "optionComponent": [Function],
                      "options": Array [
                        "add-a-person",
                        "add-a-place",
                      ],
                      "validation": Object {
                        "required": true,
                      },
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                ],
                "type": "div",
              },
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <div
                  className="editor__section"
                >
                  <h2>
                    Display Variable
                  </h2>
                  <p>
                    Select a variable to use as a label when displaying this node.
                  </p>
                  <Field
                    component={[Function]}
                    name="displayVariable"
                    options={Array []}
                  >
                    <option
                      value=""
                    >
                      — Select display variable —
                    </option>
                  </Field>
                </div>,
                "contentId": "guidance.registry.type.displayVariable",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <h2>
                      Display Variable
                    </h2>,
                    <p>
                      Select a variable to use as a label when displaying this node.
                    </p>,
                    <Field
                      component={[Function]}
                      name="displayVariable"
                      options={Array []}
                    >
                      <option
                        value=""
                      >
                        — Select display variable —
                      </option>
                    </Field>,
                  ],
                  "className": "editor__section",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "Display Variable",
                    },
                    "ref": null,
                    "rendered": "Display Variable",
                    "type": "h2",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "Select a variable to use as a label when displaying this node.",
                    },
                    "ref": null,
                    "rendered": "Select a variable to use as a label when displaying this node.",
                    "type": "p",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "children": <option
                        value=""
                      >
                        — Select display variable —
                      </option>,
                      "component": [Function],
                      "name": "displayVariable",
                      "options": Array [],
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": "— Select display variable —",
                        "value": "",
                      },
                      "ref": null,
                      "rendered": "— Select display variable —",
                      "type": "option",
                    },
                    "type": [Function],
                  },
                ],
                "type": "div",
              },
              "type": [Function],
            },
          ],
          "type": Symbol(react.fragment),
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <div
              className="editor__section"
            >
              <Variables
                form="TYPE_EDITOR"
                initialSortOrder={
                  Object {
                    "direction": "asc",
                    "property": "name",
                  }
                }
                name="variables"
                sortableProperties={
                  Array [
                    "name",
                    "type",
                  ]
                }
              />
            </div>,
            "contentId": "guidance.registry.type.variables",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <Variables
                form="TYPE_EDITOR"
                initialSortOrder={
                  Object {
                    "direction": "asc",
                    "property": "name",
                  }
                }
                name="variables"
                sortableProperties={
                  Array [
                    "name",
                    "type",
                  ]
                }
              />,
              "className": "editor__section",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "form": "TYPE_EDITOR",
                "initialSortOrder": Object {
                  "direction": "asc",
                  "property": "name",
                },
                "name": "variables",
                "sortableProperties": Array [
                  "name",
                  "type",
                ],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": "div",
          },
          "type": [Function],
        },
      ],
      "type": Symbol(react.fragment),
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
